# code-training-discord

./: .pre-commit-config.yaml  README.md
backend/: compose.yaml  logging.ini  pyproject.toml
backend/src/: database.py  dependencies.py  domains.py  main.py  middleware.py  utils.py
backend/src/api/: auth.py  auth_verify.py  channel.py  friend.py  login.py  message.py  test_user.py  user.py
backend/src/repository/: base_exception.py  channel_repository.py  decorators.py  friend_repository.py  guild_member_repository.py  guild_repository.py  message_repository.py  session_repository.py  test_user_repository.py  user_repository.py
backend/src/schema/: channel_schema.py  friend_schema.py  login_schema.py  message_schema.py  user_schema.py
backend/src/usecase/: base_exception.py  channel.py  channel_access_checker.py  create_message.py  create_user.py  friend.py  get_channel_messages.py  login.py
backend/src/utils/: api_utils.py  logger_utils.py  utils.py  validators.py
backend/tests/: dependencies_test.py  test_channel_api.py  test_channel_repository.py  test_channel_usecase.py  test_create_message_usecase.py  test_create_user_usecase.py  test_friend_api.py  test_friend_repository.py  test_friend_usecase.py  test_get_channel_messages_usecase.py  test_guild_member_repository.py  test_guild_repository.py  test_login_api.py  test_login_usecase.py  test_message_api.py  test_message_repository.py  test_session_repository.py  test_user_api.py  test_user_repository.py
backend/tests/api/: test_user.py
backend/tests/usercase/: test_create_user.py
doc/: auth.md  db_er.md  memo.md  tech_stack.md  tox_pytest_coverage_config.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.scss  App.tsx  index.scss
frontend/src/api/: auth.ts  friend.ts  message.ts  register.ts
frontend/src/components/: AuthGuard.tsx  Bar.tsx  LeftSideBar.tsx  Title.tsx  (+2 more)
frontend/tests/: Channel.test.tsx  ChannelPage.test.tsx  ChatContent.test.tsx  ChatMessage.test.tsx  ListItemContents.test.tsx  Login.test.tsx  Page.test.tsx  Panels.test.tsx  PeopleColumn.test.tsx  Register.test.tsx  SidebarList.test.tsx  UserProfileSidebar.test.tsx  setup.ts
(+61 files in other folders)
